# helix-hamiltonian

./: .gitignore  LICENSE  README.md  Roadmap.md  SOP  SOP.md  SOP_NODE_SYNCHRONIZATION.md  Security_Advisory.md  atoms_as_geometry\ontology.md  community-feedback.md  pyproject.toml  requirements.txt
.github/workflows/: hamiltonian-ci.yml  release.yml
assets/: FOOSBALL.md
constitution/: vocabulary_charter.yaml
docs/architecture/: stateless_reality.md
docs/hamiltonian/: FZS-MK_Operational_Runbook.md  knot_theoretic.md  merged_summary.md
docs/sovereignty/: ARTICLE_5.md  Constitutional_Runtime.md  RFC_0001-locked.md  RFC_0001.md  RFC_0001_v4.md  charter_v1.2.md  stateless_reality_brief.md
models/: zeta_attention.py
papers/: RFC_0001_v4_fr.tex  The_Constitutional_Hamiltonian.md  core_math.md  mathematical.md  multiplicity_v3_ryan.md
rules/: cpcsc_itar.json
schemas/: constitutional_parameters.json  gicd_schema.json  mirror_traps.jsonl  repo_manifest.json
scripts/: pixelate_alexander.py
src/: alerts.py  authority.py  invariants.py
src/gicd/: __init__.py  scan.py
src/helix_hamiltonian/: __init__.py  authority.py  core.py  invariants.py  policy_compiler.py  ttd_bridge.py
src/helix_hamiltonian/federation/: consensus.py  federation.py
src/helix_hamiltonian/gicd/: __init__.py  scan.py
src/helix_sovereign/: __init__.py  demo_binding_artifact.py
src/helix_sovereign/core/: __init__.py  fzs_mk.py
telemetry/: mask_pressure.py
tests/: fail_closed_test.py  red_team_audit.py  test_authority.py  test_mirror_traps.py  test_repo_manifest.py
tests/physics/: test_h_free.py
