[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-hamiltonian"
version = "1.0.1"
authors = [
  { name="Stephen Hope", email="stephen@helixprojectai.com" },
]
description = "Constitutional Architecture for Sovereign AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["constitutional-ai", "governance", "hamiltonian", "helix", "sovereign-ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/helixprojectai-code/helix-hamiltonian"
"Bug Tracker" = "https://github.com/helixprojectai-code/helix-hamiltonian/issues"

[tool.setuptools.packages.find]
where = ["src"]
